Quorum3/Library/Tests/Templating/Pass/TemplatedParentAutoBox.quorum
use Libraries.Containers.Array
class Main<Type> is Array<Type>
    action Main
        Main<integer> main
        main:SetSize(1)
        main:Set(0, 1)
        integer i = main:Get(0)
        output i
    end
end