Quorum3/Library/Tests/Templating/Fail/IteratorNoTemplate.quorum
use Libraries.Containers.List 
use Libraries.Containers.Iterator 
use Libraries.Containers.Array

class Main
    List<integer> list 

    action Main 
        Iterator iterator = list:GetIterator() 
        integer x = 0 
        x = iterator:Next() 
    end
end